[gd_scene load_steps=30 format=2]

[ext_resource path="res://art/flower.png" type="Texture" id=1]
[ext_resource path="res://scripts/battleMode/Bullet.gd" type="Script" id=2]
[ext_resource path="res://scripts/HitBox.gd" type="Script" id=3]
[ext_resource path="res://scripts/HurtBox.gd" type="Script" id=4]
[ext_resource path="res://art/small explosion.png" type="Texture" id=5]
[ext_resource path="res://scripts/TimeSyncedAnimatedSprite.gd" type="Script" id=6]
[ext_resource path="res://art/bulletWarning.png" type="Texture" id=7]
[ext_resource path="res://art/bulletFire.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "die",
"speed": 12.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "warning",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 8 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="ParticlesMaterial" id=21]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 52.15
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -1.0

[node name="Bullet" type="Area2D" groups=["bulletTypes"]]
scale = Vector2( 0.1, 0.1 )
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )
shakeCamera = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
frames = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="WarningTimer" type="Timer" parent="."]
one_shot = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 48
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 3 )

[node name="bulletTrail" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -10 )
scale = Vector2( 0.778516, 0.860275 )
frames = SubResource( 18 )
frame = 9
playing = true
script = ExtResource( 6 )

[node name="TimeSyncedAnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
script = ExtResource( 6 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 20
one_shot = true
speed_scale = 3.22
explosiveness = 1.0
randomness = 0.1
process_material = SubResource( 21 )

[connection signal="child_exiting_tree" from="." to="." method="_on_Bullet_child_exiting_tree"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="timeout" from="WarningTimer" to="." method="_on_WarningTimer_timeout"]
